--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "@ldapjs/filter",
   "homepage": "https://github.com/ldapjs/filter",
   "description": "API for handling LDAP-style filters",
-  "version": "0.3.3",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "repository": {
     "type": "git",
