--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "@ldapjs/filter",
   "homepage": "https://github.com/ldapjs/filter",
   "description": "API for handling LDAP-style filters",
-  "version": "1.0.0-rc.8",
+  "version": "1.0.0-rc.9",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -19,8 +19,7 @@
   },
   "dependencies": {
     "@ldapjs/asn1": "1.2.0-rc.2",
-    "@ldapjs/protocol": "^1.1.0",
-    "assert-plus": "^1.0.0"
+    "@ldapjs/protocol": "^1.1.0"
   },
   "devDependencies": {
     "@fastify/pre-commit": "^2.0.2",
