--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "@ldapjs/asn1": "1.2.0-rc.2",
-    "@ldapjs/protocol": "^1.1.0"
+    "@ldapjs/protocol": "^1.1.0",
+    "process-warning": "^2.0.0"
   },
   "devDependencies": {
     "@fastify/pre-commit": "^2.0.2",
