--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lib": "./lib"
   },
   "dependencies": {
-    "@ldapjs/asn1": "2.0.0-rc.4",
+    "@ldapjs/asn1": "2.0.0",
     "@ldapjs/protocol": "^1.2.1",
     "process-warning": "^2.1.0"
   },
